# gpvecchia

./: .gitignore  README.md  setup.cfg
docs/examples/: example_01_1d_kernel_introduction.ipynb  example_02_1d_kernel_estimation_mle.ipynb  example_03_1d_kernel_estimation_mcmc.ipynb  example_04_1d_kernel_multplication_estimation_mcmc.ipynb  example_05_2d_kernel_estimation_mcmc.ipynb  example_05_3d_Vecchia_mle.ipynb  example_05a_2d_kernel_estimation_mcmc.ipynb  example_06_2d_scaled_kernel_estimation_mcmc.ipynb  example_07_3d_scaled_kernel_estimation_mcmc.ipynb  example_08_3d_scaling+rotations.ipynb  example_nn_speed_testing_1D.ipynb  example_xx_1d_conditional.ipynb
gpvecchia/: gpvecchia.py
src/gpvecchia/: cov.py  gpbase.py  vecchia.py  vecchia_op.py  vecchia_utils.py
