[metadata]
name = gpvecchia
author = William Edge; Matt Rayson;
author_email = william.edge@uwa.edu.au
description = Vecchia approximation routines for Gaussian Process and Data Assimilation
license = MIT
long_description_content_type = text/markdown
url = https://github.com/TIDE-ITRH/gpvecchia
project_urls =
    Bug Tracker = https://github.com/TIDE-ITRH/gpvecchia/issues
    Changelog = https://github.com/TIDE-ITRH/gpvecchia/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT
    Intended Audience :: Developers

[options]
package_dir =
    = gpvecchia
packages = find:
install_requires =
    numpy
    scipy
    xarray
    matplotlib
    emcee
    sklearn
    gptide
    psutil
	

[options.packages.find]
where = gpvecchia

[options.entry_points]
console_scripts =
    gpvecchia = gpvecchia.app:entry_point
