[metadata]
name = gpvecchia
version = 0.0.3

[project]
name = "gpvecchia"
version = "0.0.3"
authors = [
	{ name="William Edge", email="william.edge@uwa.edu.au" },
	{ name="Matt Rayson", email="Matt.Rayson@uwa.edu.au" }]
description = "Vecchia approximation routines for Gaussian Process and Data Assimilation"
requires-python = ">=3.8"
long_description_content_type = text/markdown
project_urls =
	Homepage = https://github.com/TIDE-ITRH/gpvecchia
    Bug Tracker = https://github.com/TIDE-ITRH/gpvecchia/issues
    Changelog = https://github.com/TIDE-ITRH/gpvecchia/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    scipy
    xarray
    matplotlib
    emcee
    scikit-learn
    gptide
    psutil
	

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gpvecchia = gpvecchia.app:entry_point
